--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-mini-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saad-elkabche.github.io/mini-projet",
+  "homepage": "https://mini-projet.msjsa.com",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -21,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
